[project]
name = "euler-cluster-parameterization"
version = "0.1.0"
description = "Parameter optimization tool for Euler protocol clusters"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.20",
    "pandas>=2.0",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "web3>=6.0",
    "requests>=2.28",
    "plotly>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = ["pytest>=7.0"]
